# z2edit

./: .bazelrc  .clang-format  .gitignore  .gitmodules  BUILD  BUILD.bazel  Cargo.toml  README.md  TODO  TODO.md  WORKSPACE  WORKSPACE.bazel  app.cc  app.h  app_shell.py  application.cc  imapp-util.h  imapp.cc  imapp.h  imgui.BUILD  main.cc  nfd.BUILD  test.sh  zelda2.textpb
.githooks/: pre-commit
ajson/: BUILD.bazel  ajson.cc  ajson.h  ajson_test.cc  deserialize.cc  deserialize.h  deserialize_test.cc  document.h  document_test.cc  py_test_lib.cc  pybind_test.py  reflect.h  reflect_macros.h  reflect_test.cc  relax.cc  relax.h  relax_test.cc  serialize.cc  serialize.h  test_lib.h  types.h  variant_helpers.h
ajson/python/: BUILD.bazel  relax.cc  relax.py  relax_test.py
alg/: BUILD  fdg.cc  fdg.h  palace_gen.cc  palace_gen.h  terrain.cc  terrain.h  vec2.h
config/vanilla/: enemies.ron  experience.ron  freespace.ron  items.ron  misc_hacks.ron  misc_start.ron  overworld.ron  palette.ron  sideview.ron  sideview_objects.ron  text_table.ron
content/: areas.textpb  available.textpb  breakblocks.textpb  drops.textpb  dynamic_banks.textpb  enemies.textpb  help.textpb  item_effects.textpb  items.textpb  maps.textpb  misc.textpb  obj_greatpalace.textpb  obj_overworld.textpb  obj_palace.textpb  obj_town.textpb  overworld_tiles.textpb  palace5.textpb  palace_continue.textpb  palettes.textpb  spell_bits.textpb  spell_cast.textpb  spell_restrictions.textpb  town_text.textpb  worlds.textpb  xptable.textpb
crap/: BUILD  chr_load.cc  dump.cc  overworld.cc  overworld.h  romfile.cc  romfile.h  unbank.sh
doc/: idpath.md
doc/internal/: idpath.md
docs/: README.md  index.html  index.md  overworld-editor.md
docs/rominfo/: collectable_items_bitmap.md  freespace.md  index.md  overworld-encounters.md  town-doors.md  world_numbers.md
hacked-roms/: all_sounds.txt  all_zs.z2edit  bezerk-spell.z2edit  boots-fast-swamp.z2edit  carock-vertical-gtm.z2edit  copyloop.xdelta  copyloops.z2edit  credits.z2edit  dash-for-gtm.z2edit  dm_palace_for_meg.z2edit  dynamic-banks-3ov.z2edit  dynamic-banks-sounds.z2edit  dynamic-banks.z2edit  fast-spell.z2edit  gtm-hud2.z2edit  magic_and_life_fairy.z2edit  mmc3-conversion.z2edit  mmc5-conversion.z2edit  move_meds_mc_for_gtm.z2edit  move_sleeping_zelda_into_gp.z2edit  overworld-animate.z2edit  overworld_tiles.z2edit  palace_continue.z2edit  pbaghack.z2edit  reflect-color.z2edit  softlock-fix.z2edit  tbird-no-spells.z2edit  three-overworlds.xdelta  three.z2edit  timbre-split.z2edit  title-hack.z2edit  title-text.z2edit  vanilla-ultra.z2edit  z2-3ov-13pal.xdelta  z2-pbaghack.xdelta  z2gether.z2edit  z2status-gtm.z2edit  z2status-rez.z2edit  z2status.z2edit  z2title-snow.z2edit
hacked-roms/gtm/: dynamic-banks-fix.z2edit  dynamic-banks-sounds.z2edit  fast-spell.z2edit  keep_xp.z2edit  magic_and_life_fairy.z2edit  no-jump.z2edit  tbird_fireballs.z2edit  tbird_victory.z2edit
hacked-roms/hackjam2020/: barba_projectiles.z2edit  benthic_king.ips  benthic_king.txt  boss_key.z2edit  hc_mc_in_palaces.z2edit  title-text.z2edit
hacked-roms/three-config/: areas.textpb  available.textpb  enemies.textpb  items.textpb  keybinds.textpb  maps.textpb  maps.textpb.orig  misc.textpb  obj_palace.textpb  palace_continue.textpb  palettes.textpb  zelda2-big.textpb
hackjam2020/: hackjam.z2prj.REMOVED.git-id  hc_mc_in_palaces.z2edit  palace_doors.z2edit  swim.z2edit  tile_expansion.z2edit  victory.z2edit
imwidget/: BUILD  BUILD.bazel  debug_console.cc  debug_console.h  drops.cc  drops.h  editor.cc  editor.h  enemyattr.cc  enemyattr.h  error_dialog.cc  error_dialog.h  glbitmap.cc  glbitmap.h  hwpalette.cc  hwpalette.h  imapp.cc  imapp.h  imutil.cc  imutil.h  imwidget.h  item_effects.cc  item_effects.h  map_command.cc  map_command.h  map_connect.cc  map_connect.h  misc_hacks.cc  misc_hacks.h  multimap.cc  multimap.h  neschrview.cc  neschrview.h  object_table.cc  object_table.h  overworld_encounters.cc  overworld_encounters.h  palace_gfx.cc  palace_gfx.h  palette.cc  (+17 more)
ips/: BUILD  ips.cc  ips.h  ipspatch.cc
music/: BUILD  README.md  credits.cc  hack2.cc  main.cc  music.cc  music.h  solstice.cc  undersea.cc
nes/: BUILD  BUILD.bazel  address.cc  address.h  address_test.cc  cartridge.cc  cartridge.h  chr_util.cc  chr_util.h  cpu6502.cc  cpu6502.h  enemylist.cc  enemylist.h  mapper.cc  mapper.h  mapper1.cc  mapper1.h  mapper2.cc  mapper3.cc  mapper4.cc  memory.cc  memory.h  nesfile.cc  nesfile.h  python.cc  python.h  text_encoding.cc  text_encoding.h  text_list.cc  text_list.h  z2decomp_funcs.cc  z2decompress.cc  z2decompress.h  z2objcache.cc  z2objcache.h
proto/: BUILD  BUILD.bazel  generator.proto  gui_extension.proto  keybinds.proto  project.proto  proto.bzl  rominfo.proto  session.proto
python/: assembler.py  console.py
python/z2edit/: assembler.py  console.py  debug.py  extract.py  fix.py  util.py
rules/: BUILD  gflags.patch  iconfonts.BUILD  imgui.BUILD  nfd.BUILD  patched_http_archive.bzl  repo.bzl
src/: errors.rs  main.rs
src/gui/: app.rs  app_context.rs  console.rs  error_dialog.rs  font_awesome_5.rs  glhelper.rs  mod.rs  preferences.rs  project_wizard.rs  selector.rs  util.rs  visibility.rs
src/nes/: address.rs  (+7 more)
tools/: BUILD  BUILD.bazel  downloader.py  mingw_compiler_win32.BUILD  mingw_compiler_win64.BUILD  pack_config.cc  release_windows.sh
util/: BUILD  BUILD.bazel  browser.cc  browser.h  chr_dump.cc  compress.cc  compress.h  config.h  crc.cc  crc.h  file.cc  file.h  fontawesome.cc  fontawesome.h  fpsmgr.h  gamecontrollerdb.cc  gamecontrollerdb.h  imgui_impl_sdl.cpp  imgui_impl_sdl.h  logging.cc  logging.h  macros.h  os.cc  os.h  posix_status.cc  posix_status.h  proto_file.cc  proto_file.h  status.cc  status.h  statusor.h  stb_perlin.h  stb_tilemap_editor.h  string.h  stringpiece.h  stringprintf.h  strutil.h
util/gui/: BUILD.bazel  color_edit_flags.inc  flags.cc  flags.h  gen.py  input_text_flags.inc  popup_flags.inc  slider_flags.inc  style_color.inc  style_var.inc  table_flags.inc  widget.cc  widget.h  window_flags.inc
windows/: release.sh  zip4win.py
(+125 files in other folders)
