package(default_visibility = ["//visibility:public"])

genrule(
    name = "make_version",
    outs = ["version.h"],
    cmd = """sed -e 's/ / "/g' -e 's/$$/"\\n/g' -e "s/^/#define /g" bazel-out/volatile-status.txt > $@""",
    stamp = 1,
)

cc_library(
    name = "app",
    srcs = [
        "app.cc",
    ],
    hdrs = [
        "app.h",
        "version.h",
    ],
    linkopts = [
        "-lSDL2main",
        "-lSDL2",
        "-lSDL2_image",
        "-lSDL2_mixer",
        "-lSDL2_gfx",
    ],
    deps = [
        "//imwidget:base",
        "//imwidget:error_dialog",
        "//util:browser",
        "//util:fpsmgr",
        "//util:os",
        "@com_google_absl//absl/log",

        # TODO(cfrantz): on ubuntu 16 with MIR, there is a library conflict
        # between MIR (linked with protobuf 2.6.1) and this program,
        # which builds with protbuf 3.x.x.  A temporary workaround is to
        # not link with nfd (native-file-dialog).
        #"//external:nfd",
    ],
)

filegroup(
    name = "content",
    srcs = glob(["content/*.textpb"]),
)

cc_binary(
    name = "application",
    srcs = [
        "main.cc",
    ],
    linkopts = select({
        #":windows": [
        #    "-lpthread",
        #    "-lm",
        #    "-lopengl32",
        #    "-ldinput8",
        #    "-ldxguid",
        #    "-ldxerr8",
        #    "-luser32",
        #    "-lgdi32",
        #    "-lwinmm",
        #    "-limm32",
        #    "-lole32",
        #    "-loleaut32",
        #    "-lshell32",
        #    "-lversion",
        #    "-luuid",
        #],
        "//conditions:default": [
            "-lpthread",
            "-lm",
            "-lGL",
        ],
    }),
    deps = [
        ":app",
        "//util:config",
        "@com_google_absl//absl/flags:parse",
        "@com_google_absl//absl/flags:usage",
    ],
)

#pkg_winzip(
#    name = "application-windows",
#    files = [
#        ":application",
#    ],
#)
