[package]
name = "z2e2"
version = "0.1.0"
authors = ["Chris Frantz <frantzcj@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# Basic application stuff
chrono = "0.4"
structopt = "0.3.18"
log = "0.4"
simplelog = "^0.7.6"
directories = "3.0.1"
error-chain = "0.12.4"
rustyline = "6.3.0"
libc = "0.2"
termcolor = "1.1"
once_cell = "1.4.1"
whoami = "0.9.0"
shellwords = "1.1.0"
smart-default = "0.6.0"
sha2 = "0.9.2"

# Python integration stuff
pyo3 = "0.12.1"
dict_derive = "0.3.0"

# Serialization stuff
ron = "*"
serde = { version="1", features=["serde_derive", "rc"] }
typetag = "0.1"
serde_json = "1.0.59"

# Gui stuff
sdl2 = "0.34"
gl = "0.14.0"
nfd = "0.0.4"
#imgui = "0.5.0"
imgui = {version="*", path="third_party/imgui-rs" }
imgui-opengl-renderer = {version="*", path="third_party/rust-imgui-opengl-renderer" }
imgui-sdl2 = {version="*", path="third_party/rust-imgui-sdl2" }

[target.'cfg(unix)'.dependencies]
nix = "0.18"
