######################################################################
# bazel rules
######################################################################
load("//third_party/bazel:repos.bzl", "bazel_repos")
bazel_repos()

load("//third_party/bazel:deps.bzl", "bazel_deps")
bazel_deps()

######################################################################
# python deps 
######################################################################
load("//third_party/python:repos.bzl", "pybind11_repos")
pybind11_repos()

load("@rules_python//python:pip.bzl", "pip_parse")

pip_parse(
   name = "pydeps",
   requirements_lock = "//third_party/python:requirements_lock.txt",
)
load("@pydeps//:requirements.bzl", "install_deps")
install_deps()

######################################################################
# Google stuff: absl, googletest, protobuf
######################################################################
load("//third_party/google:repos.bzl", "google_repos")
google_repos()

load("//third_party/google:deps.bzl", "google_deps")
google_deps()

######################################################################
# ImGui
######################################################################
load("//third_party/imgui:repos.bzl", "imgui_repos")
imgui_repos()

load("//third_party/imgui:deps.bzl", "imgui_deps")
imgui_deps()

######################################################################
# fonts: FontAwesome
######################################################################
load("//third_party/fonts:repos.bzl", "fonts_repos")
fonts_repos()

load("//third_party/fonts:deps.bzl", "fonts_deps")
fonts_deps()
