package(default_visibility = ["//visibility:public"])

cc_library(
    name = "base",
    srcs = [
        "debug_console.cc",
        "imapp.cc",
        "imutil.cc",
    ],
    hdrs = [
        "debug_console.h",
        "imapp.h",
        "imutil.h",
        "imwidget.h",
    ],
    deps = [
        "//util:fpsmgr",
        "//util:gamecontrollerdb",
        "//util:os",
        "@com_github_imgui//:imgui",
        "@com_github_imgui//:sdl_opengl3",
        "@com_google_absl//absl/flags:flag",
        "@com_google_absl//absl/log",
    ],
)

cc_library(
    name = "error_dialog",
    srcs = ["error_dialog.cc"],
    hdrs = ["error_dialog.h"],
    deps = [
        ":base",
        "@com_github_imgui//:imgui",
        "@com_google_absl//absl/strings",
    ],
)

cc_library(
    name = "glbitmap",
    srcs = ["glbitmap.cc"],
    hdrs = ["glbitmap.h"],
    deps = [
        "@com_github_imgui//:imgui",
    ],
)
