load("@rules_python//python:py_test.bzl", "py_test")
load("@rules_python//python:py_library.bzl", "py_library")
load("@pydeps//:requirements.bzl", "requirement")
package(default_visibility = ["//visibility:public"])

cc_library(
    name = "relax_lib",
    srcs = ["relax.cc"],
    deps = [
        "//ajson:relax",
        "//ajson:document",
        "@pybind11",
    ],
)

cc_shared_library(
    name = "relax_so",
    shared_lib_name = "_relax.so",
    deps = [
        ":relax_lib",
    ],
)

py_library(
    name = "relax",
    srcs = ["relax.py"],
    data = [":relax_so"],
)

py_test(
    name = "relax_test",
    srcs = ["relax_test.py"],
    deps = [
        ":relax",
        requirement("ipython"),
    ],
)
